// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Footer renders different Sizes 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eizdkD gKNVZt"
    >
      <div
        className="sc-heFykY grgDOB"
      >
        <div
          className="sc-iaFMSK uENIt"
        >
          <button
            className="sc-lbtWl jKXfql"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jNVCqq iQheEd"
            />
          </button>
        </div>
        <div
          className="sc-iaFMSK uENIt"
        >
          <button
            className="sc-lbtWl dMsGMy"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jNVCqq iQheEd"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-iaFMSK uENIt"
      >
        <button
          className="sc-lbtWl eOxnjU"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-jNVCqq iQheEd"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eizdkD ljuBAh"
      size="small"
    >
      <div
        className="sc-heFykY grgDOB"
      >
        <div
          className="sc-iaFMSK uENIt"
        >
          <button
            className="sc-lbtWl behMU"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jNVCqq iQheEd"
            />
          </button>
        </div>
        <div
          className="sc-iaFMSK uENIt"
        >
          <button
            className="sc-lbtWl hpKIdb"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jNVCqq iQheEd"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-iaFMSK uENIt"
      >
        <button
          className="sc-lbtWl dpPJRt"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-jNVCqq iQheEd"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog Footer renders with Button MD 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eizdkD kuPMIH"
    >
      <div
        className="sc-heFykY grgDOB"
      >
        <div
          className="sc-iaFMSK uENIt"
        >
          <button
            className="sc-lbtWl jKXfql"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jNVCqq iQheEd"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eizdkD kuPMIH"
    >
      <div
        className="sc-heFykY grgDOB"
      >
        <div
          className="sc-iaFMSK uENIt"
        >
          <button
            className="sc-lbtWl jKXfql"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jNVCqq iQheEd"
            />
          </button>
        </div>
        <div
          className="sc-iaFMSK uENIt"
        >
          <button
            className="sc-lbtWl dMsGMy"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jNVCqq iQheEd"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eizdkD kuPMIH"
    >
      <div
        className="sc-heFykY grgDOB"
      >
        <div
          className="sc-iaFMSK uENIt"
        >
          <button
            className="sc-lbtWl jKXfql"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jNVCqq iQheEd"
            />
          </button>
        </div>
        <div
          className="sc-iaFMSK uENIt"
        >
          <button
            className="sc-lbtWl dMsGMy"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jNVCqq iQheEd"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-iaFMSK uENIt"
      >
        <button
          className="sc-lbtWl eOxnjU"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-jNVCqq iQheEd"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eizdkD kuPMIH"
    >
      <div
        className="sc-heFykY grgDOB"
      >
        <div
          className="sc-iaFMSK uENIt"
        >
          <button
            className="sc-lbtWl jKXfql"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jNVCqq iQheEd"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-iaFMSK uENIt"
      >
        <button
          className="sc-lbtWl eOxnjU"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-jNVCqq iQheEd"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eizdkD kuPMIH"
    >
      <div
        className="sc-heFykY grgDOB"
      >
        <div
          className="sc-iaFMSK uENIt"
        >
          <button
            className="sc-lbtWl dMsGMy"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jNVCqq iQheEd"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eizdkD kuPMIH"
    >
      <div
        className="sc-heFykY grgDOB"
      >
        <div
          className="sc-iaFMSK uENIt"
        >
          <button
            className="sc-lbtWl dMsGMy"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jNVCqq iQheEd"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-iaFMSK uENIt"
      >
        <button
          className="sc-lbtWl eOxnjU"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-jNVCqq iQheEd"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;

exports[`Dialog Footer renders with Button SM 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eizdkD kuPMIH"
    >
      <div
        className="sc-heFykY grgDOB"
      >
        <div
          className="sc-iaFMSK uENIt"
        >
          <button
            className="sc-lbtWl behMU"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jNVCqq iQheEd"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eizdkD kuPMIH"
    >
      <div
        className="sc-heFykY grgDOB"
      >
        <div
          className="sc-iaFMSK uENIt"
        >
          <button
            className="sc-lbtWl behMU"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jNVCqq iQheEd"
            />
          </button>
        </div>
        <div
          className="sc-iaFMSK uENIt"
        >
          <button
            className="sc-lbtWl hpKIdb"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jNVCqq iQheEd"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eizdkD kuPMIH"
    >
      <div
        className="sc-heFykY grgDOB"
      >
        <div
          className="sc-iaFMSK uENIt"
        >
          <button
            className="sc-lbtWl behMU"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jNVCqq iQheEd"
            />
          </button>
        </div>
        <div
          className="sc-iaFMSK uENIt"
        >
          <button
            className="sc-lbtWl hpKIdb"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jNVCqq iQheEd"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-iaFMSK uENIt"
      >
        <button
          className="sc-lbtWl dpPJRt"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-jNVCqq iQheEd"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eizdkD kuPMIH"
    >
      <div
        className="sc-heFykY grgDOB"
      >
        <div
          className="sc-iaFMSK uENIt"
        >
          <button
            className="sc-lbtWl behMU"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jNVCqq iQheEd"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-iaFMSK uENIt"
      >
        <button
          className="sc-lbtWl dpPJRt"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-jNVCqq iQheEd"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eizdkD kuPMIH"
    >
      <div
        className="sc-heFykY grgDOB"
      >
        <div
          className="sc-iaFMSK uENIt"
        >
          <button
            className="sc-lbtWl hpKIdb"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jNVCqq iQheEd"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-eizdkD kuPMIH"
    >
      <div
        className="sc-heFykY grgDOB"
      >
        <div
          className="sc-iaFMSK uENIt"
        >
          <button
            className="sc-lbtWl hpKIdb"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jNVCqq iQheEd"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-iaFMSK uENIt"
      >
        <button
          className="sc-lbtWl dpPJRt"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-jNVCqq iQheEd"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;
